...
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/start_page_lists_separator"
                android:visibility="gone" />

            <TextView
                android:id="@+id/start_page_travl_zine_container_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="@dimen/start_page_travl_zine_container_title_margin_start"
                android:layout_marginTop="@dimen/start_page_travl_zine_container_title_margin_top"
                android:fontFamily="@font/montserrat_bold"
...
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:visibility="gone"
                android:textSize="@dimen/start_page_titles_text_size" />

            <FrameLayout
                android:id="@+id/start_page_travl_zine_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_page_travl_zine_container_margin_top"
                android:layout_marginBottom="150dp"
                android:nestedScrollingEnabled="false"
                android:visibility="gone" />
...
